# Influencer-Scout-Agent

./: .gitignore  .mcp.json  CLAUDE.md  Influencer-Scout-PRD.md  README.en.md  README.md  README.zh.md  setup.sh  vercel.json
.agent/: .env.example
.agent/skills/lookup/: SKILL.md
.agent/skills/outreach/: SKILL.md
.agent/skills/scout/: SKILL.md
.claude/: settings.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: api_keys.py  keywords.py  outreach.py  scout.py
backend/app/core/: auth.py  campaign_access.py  config.py
backend/app/services/: email_sender.py  enrich.py  gmail.py  tikhub.py
context/campaigns/_example/: campaign.md  keywords.md  outreach.md
docs/: coding-guidelines.md  database-design.md  environment.md
docs/adr/: 001-user-email-config-storage.md
docs/product-design/: implementation-prd.md
sql/: supabase_tasks_realtime_and_debug.sql
sql/migrations/: 20250321_campaign_creators_preview_image_url.sql  20250322_tasks_rls_allow_owner_update.sql  20250324_campaign_creators_trigger_video_url.sql  20250324_scout_batches_name_dismissed.sql  20250324_user_email_config_gmail_oauth.sql  20250325_campaign_creators_trigger_video_views.sql  20250325_outreach_log_insert_rls.sql  20250325_user_api_keys.sql  20250326_scout_batches_rls_fix.sql  20250326_tasks_select_rls.sql  20260326_campaign_creators_qualified.sql
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: app-layout.tsx  app-sidebar.tsx  nav-user.tsx  new-campaign-dialog.tsx  task-tracker.tsx
(+37 files in other folders)
