[project]
name = "influencer-scout-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "supabase>=2.13.0",
    "python-dotenv>=1.1.0",
    "anthropic>=0.52.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.0.0",
]
